# image_compression_hro

./: CMakeLists.txt
Modules/: FindFFTW.cmake
include/: dct.h  file_io.h
src/: CMakeLists.txt  file_description.proto
src/compress/: dct.cpp  main.cpp  read_image_file.cpp  write_to_bin.cpp
src/viewer/: main.cpp
