cmake_minimum_required(VERSION 2.8)
project(compressie) 
include_directories("include")
set(CMAKE_CXX_FLAGS "-std=c++0x -Wall")

if (CMAKE_BUILD_TYPE MATCHES "[Dd][Ee][Bb][Uu][Gg]")
  message( "DEBUG BUILD ON" )
  set(CMAKE_VERBOSE_MAKEFILE_ON)
  set(DEBUG_BUILD 1)
  add_definitions(-DDEBUG)
endif()

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/Modules)
find_package(ImageMagick COMPONENTS Magick++ REQUIRED)
include_directories(${ImageMagick_INCLUDE_DIRS})
find_package(Armadillo REQUIRED)
include_directories(${ARMADILLO_INCLUDE_DIRS})
find_package(FFTW REQUIRED)
include_directories(${FFTW_INCLUDE_DIR})
add_subdirectory(src)
